--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <h1>CARDALANDS</h1>
     <h3>OPEN WORLD SPACE EXPLORATION ADVENTURE GAME</h3>
     <br>
-    <a href="#about" class="btn btn-dark btn-lg">PLAY</a>
+    <a href="#about" class="btn btn-dark btn-lg">Coming Soon</a>
   </div>
 </header>
 
@@ -85,9 +85,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h3>NFT AVAILABLE ON</h3>
-        <a href="#" class="btn btn-lg btn-light">CNFT.IO</a>
-        <a href="#" class="btn btn-lg btn-dark">More...</a>
+        <h3>FOUNDERS NFT LIMITED EDITION ON SALE</h3>
+        <a href="#" class="btn btn-lg btn-light">BUY</a>
+        
       </div>
     </div>
   </div>
