--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 
   <header id="top" class="header">
   <div class="text-vertical-center">
-    <h1>CARDALANDS</h1>
-    <h3>OPEN WORLD SPACE EXPLORATION ADVENTURE GAME</h3>
+    <h1 class="btn-dark btn-lg">CARDALANDS</h1>
+    <h3 style="color:white" >OPEN WORLD SPACE EXPLORATION ADVENTURE GAME</h3>
     <br>
-    <a href="#about" class="btn btn-dark btn-lg">Coming Soon</a>
+   
   </div>
 </header>
 
@@ -69,8 +69,8 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2>THE JOURNEY TO THE NEW WORLD </h2>
-        <p class="lead">Cardalands a planet with habitable floating island. <a target="_blank" href="https://discord.gg/WueSCThEKX">Join Discord</a>.</p>
+        <h2 style="color:grey" >THE JOURNEY TO THE NEW WORLD </h2>
+        <p class="lead" style="color:grey">Cardalands a planet with habitable floating island. <a target="_blank" href="https://discord.gg/WueSCThEKX">Join Discord</a>.</p>
       </div>
     </div>
     <!-- /.row -->
@@ -82,7 +82,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-10 col-lg-offset-1 text-center">
-        <h2>WORKING DEMO NFT ROOM</h2>
+        <h2 style="color:grey">WORKING DEMO NFT ROOM</h2>
         <hr class="small">
         <div class="row">
           <div class="col-md-6">
@@ -110,6 +110,7 @@
 
   
   
+  
  
   <aside class="call-to-action bg-primary">
   <div class="container">
@@ -123,6 +124,76 @@
   </div>
 </aside>
  
+  <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
+<section id="services" class="services bg-primary">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-lg-10 col-lg-offset-1">
+        <h2>SEASONS</h2>
+        <hr class="small">
+        <div class="row">
+          <div class="col-md-3 col-sm-6">
+            <div class="service-item">
+              <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-spin fa-compass fa-stack-1x text-primary"></i>
+            </span>
+              <h4>
+                <strong>Season 1</strong>
+              </h4>
+              <p>Spaceship Survival</p>
+              <a href="#" class="btn btn-light">Coming Soon</a>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <div class="service-item">
+              <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-spin fa-compass fa-stack-1x text-primary"></i>
+            </span>
+              <h4>
+                <strong>Season 2</strong>
+              </h4>
+              <p>Unknown Planet Survival</p>
+              <a href="#" class="btn btn-light">Coming Soon</a>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <div class="service-item">
+              <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-spin fa-compass fa-stack-1x text-primary"></i>
+            </span>
+              <h4>
+                <strong>Season 3</strong>
+              </h4>
+              <p>War in Space</p>
+              <a href="#" class="btn btn-light">Coming Soon</a>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <div class="service-item">
+              <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-spin fa-compass fa-stack-1x text-primary"></i>
+            </span>
+              <h4>
+                <strong>Season 4</strong>
+              </h4>
+              <p>Landing On Cardalands</p>
+              <a href="#" class="btn btn-light">Coming Soon</a>
+            </div>
+          </div>
+        </div>
+        <!-- /.row (nested) -->
+      </div>
+      <!-- /.col-lg-10 -->
+    </div>
+    <!-- /.row -->
+  </div>
+  <!-- /.container -->
+</section>
+
   <footer>
   <div class="container">
     <div class="row">
