--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <header id="top" class="header">
   <div class="text-vertical-center">
     <h1 class="btn-dark btn-lg">CARDALANDS</h1>
-    <h3 style="color:white" >OPEN WORLD SPACE EXPLORATION ADVENTURE GAME</h3>
+    <h3 style="color:white" >OPEN WORLD SPACE EXPLORATION NFT ADVENTURE GAME</h3>
     <br>
    
   </div>
