--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <div class="col-lg-12 text-center">
         <h3>NFT AVAILABLE IN GAME</h3>
 		
-        <a href="#" class="btn btn-lg btn-light">DOWNLOAD</a>
+        <a href="https://cardalands.itch.io/cardalands" class="btn btn-lg btn-light">DOWNLOAD</a>
         
       </div>
     </div>
