--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
          
         </ul>
         <hr class="small">
-        <h4>Policy ID: a0be5f2316567633b6b85f7a1fb526308f8848a74b48ddf3bb342224</h4>
+        <h4>Policy ID: </h4>
       </div>
     </div>
   </div>
