--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 style="color:grey" >PROLOGUE </h2>
-        <p class="lead" style="color:grey">Earth has discovered a new inhabitable planet. They observed it to find an Earth-like atmosphere with floating islands and name it Cardalands.
+        <p class="lead" style="color:grey">Earth has discovered a new habitable planet. They observed it to find an Earth-like atmosphere with floating islands and name it Cardalands.
 
 
 Cardalands Enterprise launches a space program for citizens to participate in the first landing on Cardalands after building a colony by space rovers. 
