--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@ With limited resources and unknown possible hostile alien threats outside the sh
         <hr class="small">
         <div class="row">
 		
+		
+		
+		
 		<!--
           <div class="col-md-6">
             <div class="portfolio-item">
@@ -129,6 +132,8 @@ With limited resources and unknown possible hostile alien threats outside the sh
 
 
 
+
+
   
   
   
@@ -143,7 +148,7 @@ With limited resources and unknown possible hostile alien threats outside the sh
         
     </div>
       <div class="col-lg-12 text-center">
-        <h3 class="lead" style="color:grey">All game items are NFT in the Cardano blockchain. Game items including key-card to open doors, weapons, battery packs, cartridges, and more...</h3>
+        <h3 class="lead" style="color:grey">All game items are NFT in the Cardano blockchain. Game items including key-card to open doors, weapons, battery packs, cartridges will be available in the game NFT Room.</h3>
 		
         <a href="https://cardalands.itch.io/cardalands" class="btn btn-lg bg-primary" style="background-color: #6a756f!important;" >DOWNLOAD</a>
         
@@ -264,6 +269,9 @@ With limited resources and unknown possible hostile alien threats outside the sh
 <!-- Custom Theme JavaScript -->
 <script src="js/custom.js"></script> 
 
+
+
+  
   
 </body>
 
