--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="OPEN WORLD SPACE EXPLORATION ADVENTURE GAME">
   <meta name="author" content="">
 
-  <title>CARDALANDS</title>
+  <title>CARDALAND</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -59,7 +59,7 @@
 
   <header id="top" class="header">
   <div class="text-vertical-center">
-    <h1 class="btn-dark btn-lg">CARDALANDS</h1>
+    <h1 class="btn-dark btn-lg">CARDALAND</h1>
     <h3 style="color:white" >OPEN WORLD SPACE EXPLORATION NFT ADVENTURE GAME</h3>
     <br>
    
@@ -71,10 +71,10 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 style="color:grey" >PROLOGUE </h2>
-        <p class="lead" style="color:grey">Earth has discovered a new habitable planet. They observed it to find an Earth-like atmosphere with floating islands and name it Cardalands.
+        <p class="lead" style="color:grey">Earth has discovered a new habitable planet. They observed it to find an Earth-like atmosphere with floating islands and name it Cardaland.
 
 
-Cardalands Enterprise launches a space program for citizens to participate in the first landing on Cardalands after building a colony by space rovers. 
+Cardaland Enterprise launches a space program for citizens to participate in the first landing on Cardaland after building a colony by space rovers. 
 
 
 
@@ -213,7 +213,7 @@ With limited resources and unknown possible hostile alien threats outside the sh
               <h4>
                 <strong>Season 4</strong>
               </h4>
-              <p>Landing On Cardalands</p>
+              <p>Landing On Cardaland</p>
               <a href="#" class="btn btn-light">Coming Soon</a>
             </div>
           </div>
@@ -242,7 +242,7 @@ With limited resources and unknown possible hostile alien threats outside the sh
         </p>
         <ul class="list-unstyled">
           
-          <li><i class="fa fa-envelope-o fa-fw" ></i>  <a href="mailto:cardalands@gmail.com">cardalands@gmail.com</a>
+          <li><i class="fa fa-envelope-o fa-fw" ></i>  <a href="mailto:cardalandnft@gmail.com">cardalandnft@gmail.com</a>
           </li>
         </ul>
         <br>
