--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ With limited resources and unknown possible hostile alien threats outside the sh
       <div class="col-lg-12 text-center">
         <h3 class="lead" style="color:grey">All game items are NFT in the Cardano blockchain. Game items including key-card to open doors, weapons, battery packs, cartridges will be available in the game NFT Room.</h3>
 		
-        <a href="https://cardalands.itch.io/cardalands-nft-room" class="btn btn-lg bg-primary" style="background-color: #6a756f!important;" >DOWNLOAD</a>
+        <a href="https://cardalands.itch.io/cardaland-nft-room" class="btn btn-lg bg-primary" style="background-color: #6a756f!important;" >DOWNLOAD</a>
         
       </div>
     </div>
